--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "devDependencies": {
     "autoprefixer": "^7.1.6",
     "css-loader": "^0.28.7",
+    "file-loader": "^1.1.5",
     "node-sass": "^4.7.1",
     "postcss-loader": "^2.0.8",
     "precss": "^2.0.0",
@@ -23,6 +24,7 @@
   },
   "dependencies": {
     "bootstrap": "^4.0.0-beta.2",
+    "font-awesome": "^4.7.0",
     "jquery": "1.9.1 - 3",
     "popper.js": "^1.12.9"
   }
