--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "autoprefixer": "^7.1.6",
     "css-loader": "^0.28.7",
     "file-loader": "^1.1.5",
+    "html-loader": "^0.5.1",
     "node-sass": "^4.7.1",
     "postcss-loader": "^2.0.8",
     "precss": "^2.0.0",
