--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "bootstrap": "^4.0.0-beta.2",
     "font-awesome": "^4.7.0",
     "jquery": "1.9.1 - 3",
+    "normalize.css": "^7.0.0",
     "popper.js": "^1.12.9"
   }
 }
