--- a/package.json
+++ b/package.json
@@ -12,6 +12,11 @@
   },
   "devDependencies": {
     "autoprefixer": "^7.1.6",
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.2",
+    "babel-plugin-transform-class-properties": "^6.24.1",
+    "babel-preset-env": "^1.6.1",
+    "babel-preset-react": "^6.24.1",
     "css-loader": "^0.28.7",
     "file-loader": "^1.1.5",
     "html-loader": "^0.5.1",
@@ -28,6 +33,8 @@
     "font-awesome": "^4.7.0",
     "jquery": "1.9.1 - 3",
     "normalize.css": "^7.0.0",
-    "popper.js": "^1.12.9"
+    "popper.js": "^1.12.9",
+    "react": "^16.1.1",
+    "react-dom": "^16.1.1"
   }
 }
