--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "bs4-starter-project-beta",
+  "name": "react-starter-project",
   "version": "1.0.0",
-  "description": "Bootstrap 4-beta starter project.",
+  "description": "React starter project.",
   "main": "src/index.js",
-  "repository": "https://github.com/iktech/bs4-starter-project-beta.git",
+  "repository": "https://github.com/iktech/react-starter-project.git",
   "author": "Igor Kolomiyets",
   "license": "MIT",
   "scripts": {
@@ -31,9 +31,9 @@
   "dependencies": {
     "bootstrap": "^4.0.0-beta.2",
     "font-awesome": "^4.7.0",
-    "jquery": "1.9.1 - 3",
+    "jquery": "^3.2.1",
     "normalize.css": "^7.0.0",
-    "popper.js": "^1.12.9",
+    "popper.js": "^1.13.0",
     "react": "^16.1.1",
     "react-dom": "^16.1.1"
   }
