--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
   "license": "MIT",
   "scripts": {
     "serve": "webpack-dev-server",
-    "build": "webpack"
+    "build:dev": "webpack",
+    "build:prod": "webpack -p --env production",
+    "test": "jest --config=jest.config.json",
+    "test-watch": "jest --config=jest.config.json --watch"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.6",
