--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "babel-preset-react": "^6.24.1",
     "css-loader": "^0.28.7",
     "file-loader": "^1.1.5",
+    "font-awesome": "^4.7.0",
     "html-loader": "^0.5.1",
     "node-sass": "^4.7.1",
     "postcss-loader": "^2.0.8",
