--- a/package.json
+++ b/package.json
@@ -17,10 +17,13 @@
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
+    "bootstrap": "^4.0.0",
     "css-loader": "^0.28.7",
     "file-loader": "^1.1.5",
     "html-loader": "^0.5.1",
+    "jquery": "1.9.1 - 3",
     "node-sass": "^4.7.1",
+    "popper.js": "^1.12.9",
     "postcss-loader": "^2.0.8",
     "precss": "^2.0.0",
     "sass-loader": "^6.0.6",
