--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "webpack-dev-server": "^2.9.4"
   },
   "dependencies": {
-    "bootstrap": "^4.0.0-beta.2",
+    "bootstrap": "^4.0.0",
     "font-awesome": "^4.7.0",
     "jquery": "^3.2.1",
     "normalize.css": "^7.0.0",
