--- a/package.json
+++ b/package.json
@@ -29,9 +29,24 @@
     "webpack-dev-server": "^2.9.4"
   },
   "dependencies": {
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
+    "enzyme": "^3.2.0",
+    "enzyme-adapter-react-16": "^1.1.0",
+    "enzyme-to-json": "^3.2.2",
     "font-awesome": "^4.7.0",
+    "jest": "^21.2.1",
+    "moment": "^2.19.2",
     "normalize.css": "^7.0.0",
+    "raf": "^3.4.0",
     "react": "^16.1.1",
-    "react-dom": "^16.1.1"
-  }
+    "react-addons-shallow-compare": "^15.6.2",
+    "react-dates": "^15.1.0",
+    "react-dom": "^16.1.1",
+    "react-redux": "^5.0.6",
+    "react-router-dom": "^4.2.2",
+    "react-test-renderer": "^16.1.1",
+    "react-with-direction": "^1.1.0",
+    "redux": "^3.7.2",
+    "redux-thunk": "^2.2.0",
+    "uuid": "^3.1.0"  }
 }
